# python-monstercat-cli

./: pyproject.toml  setup.py
monstercat/: __main__.py  api.py  auth.py  entry.py  models.py  settings.py  sync.py  utils.py
